--- a/Easy/1108. Defanging an IP Address.md
+++ b/Easy/1108. Defanging an IP Address.md
@@ -1,6 +1,6 @@
 > Given a valid (IPv4) IP address, return a defanged version of that IP address.
-
-A defanged IP address replaces every period "." with "[.]".
+>
+> A defanged IP address replaces every period "." with "[.]".
 
 這題就是給一組IP的字串要把其中.的部分改成[.]
 
