Update 1108. Defanging an IP Address.md

--- a/Easy/1108. Defanging an IP Address.md
+++ b/Easy/1108. Defanging an IP Address.md
@@ -10,5 +10,5 @@
 ```python
 class Solution:
     def defangIPaddr(self, address: str) -> str:
-        return address.replace(".","[.]")
+        return address.replace(".","[.]") # str.replace(old, new)
 ```
