Update 1108. Defanging an IP Address.md

--- a/Easy/1108. Defanging an IP Address.md
+++ b/Easy/1108. Defanging an IP Address.md
@@ -2,6 +2,12 @@
 >
 > A defanged IP address replaces every period "." with "[.]".
 
+
+> ```
+> Input: address = "1.1.1.1"
+> Output: "1[.]1[.]1[.]1"
+> ```
+
 這題就是給一組IP的字串要把其中.的部分改成[.]
 
 基本上用python應該可以秒解
