--- a/Easy/1313. Decompress Run-Length Encoded List.md
+++ b/Easy/1313. Decompress Run-Length Encoded List.md
@@ -8,3 +8,25 @@
 > Input: nums = [1,2,3,4]
 > Output: [2,4,4,4]
 > ```
+
+這題題目的描述並不是很好
+
+主要的概念就是[0, 2, 4, 6]的相對應的數值是[1, 3, 5, 7]的個數
+
+所以以上面的例子就是
+
+[0] = 1 , [1] = 2 → 2有一個的概念
+
+[2] = 3 , [3] = 4 → 4有3個的概念
+
+
+
+```python
+class Solution:
+    def decompressRLElist(self, nums: List[int]) -> List[int]:
+        ans = []
+        for i in range (0,len(nums),2):
+            ans += nums[i] * [nums[i+1]]
+        return ans
+```
+
