Update 1295. Find Numbers with Even Number of Digits.md

--- a/Easy/1295. Find Numbers with Even Number of Digits.md
+++ b/Easy/1295. Find Numbers with Even Number of Digits.md
@@ -5,20 +5,26 @@
 > Output: 2
 > ```
 
+這題的問題是要計算出陣列中的個數為偶數的總和
+
+依照上面的例子十位數、千位數、十萬位數都是偶數位數
+
+所以我們只要知道字串的個數基本上就解的出來了
+
 
 ```python
 class Solution:
     def findNumbers(self, nums: List[int]) -> int:
         ans = 0
         for i in nums:
-            if(len(str(i)) % 2 == 0):
-                ans +=1
+            if(len(str(i)) % 2 == 0):   # 改成字串接著計算個數
+                ans +=1                 # 若是除以2不為0最終輸出答案 + 1 
         return ans
 ```
 
+#### other method
 
-```pyhton 
-other method
+```python 
 class Solution:
     def findNumbers(self, nums: List[int]) -> int:
         return sum(len(str(i)) % 2 == 0 for i in nums)
