Update 771. Jewels and Stones.md

--- a/Easy/771. Jewels and Stones.md
+++ b/Easy/771. Jewels and Stones.md
@@ -6,3 +6,21 @@
 > Input: J = "aA", S = "aAAbbbb"
 > Output: 3
 > ```
+
+這題主要是要求是否這個寶石有在我儲存的地方各代表多少
+
+以上面的例子作為舉例
+
+我想看J裡面的元素是否有在S存在
+
+J裡面有A、a
+
+S裡面有a、A、A、b、b、b、b
+
+所以結果是J在S中有三個個數輸出就為3
+
+```python
+class Solution:
+    def numJewelsInStones(self, J: str, S: str) -> int:
+        return sum(map(J.count,S)) # map(function, iterable)
+```
