Update 1221. Split a String in Balanced Strings.md

--- a/Easy/1221. Split a String in Balanced Strings.md
+++ b/Easy/1221. Split a String in Balanced Strings.md
@@ -8,3 +8,35 @@
 > Input: s = "RLRRLLRLRL"
 > Output: 4
 > ```
+
+這題是希望能夠分離出字串內包含 "R" "L" 最大的個數
+
+依上面的例子來看"RL", "RRLL",  "RL",  "RL"為這組解
+
+"RL" 為第一組
+"RRLL" 為第二組
+"RL" 為第三組
+"RL" 為第四組
+
+此排序是最能夠切割的最大個數而各個Set中均包含 "R" 、"L" 
+
+所以我們可以觀察一下要包含"R" 、"L" 有一個特性
+
+也就是若是將"R"作為+1、"L"作為-1
+
+利用上面的例子可以觀察到當總和為零的時候就會代表一組Set
+
+
+```python
+class Solution:
+    def balancedStringSplit(self, s: str) -> int:
+        count,ans = 0,0
+        for i in s:
+            if i == "L":
+                count += 1
+            else:
+                count -= 1
+            if count == 0:
+                ans += 1
+        return ans
+```
