Update 461. Hamming Distance.md

--- a/Easy/461. Hamming Distance.md
+++ b/Easy/461. Hamming Distance.md
@@ -1,9 +1,37 @@
 > The Hamming distance between two integers is the number of positions at which the corresponding bits are different.
 > 
->　Given two integers x and y, calculate the Hamming distance.
+> Given two integers x and y, calculate the Hamming distance.
 
 > ```
 > Input: x = 1, y = 4
 > Output: 2
 > ```
+
+這題是要問兩組數字間的漢明距離
+
+簡單來說就是利用二進制相對應的位子
+
+找出在同一位置上一組為0、一組為1的個數
+
+依上面的舉例 1 → 0001、4 → 0100
+
+由左至右兩組分別代表0、1的位子為第2與第4
+
+所以在這邊輸出為2
+
+利用以上的特性可以利用XOR來做運算
+
+因XOR特性為1^0 → 1 、1 ^ 1 → 0 、 0 ^ 0 → 0
+
+最後轉換成二進位輸出1的個數就是這題的答案了
+
+
+```python
+class Solution:
+    def hammingDistance(self, x: int, y: int) -> int:
+        return bin(x ^ y).count("1")
+
+```
+
+
 
