Update 1207. Unique Number of Occurrences.md

--- a/Easy/1207. Unique Number of Occurrences.md
+++ b/Easy/1207. Unique Number of Occurrences.md
@@ -5,3 +5,25 @@
 > Output: true
 > ```
 
+這題的問題是要找出各個數字在這陣列中的個數是否是唯一的
+
+依上面這個例子來看
+
+1出現3次、2出現2次、3出現1次
+
+出現的次數並沒有重複所以返回true
+
+概念就是建造一個字典存放key、values
+
+這邊我直接用collections裡面的Counter就能夠建造出來了
+
+接著比較字典裡面的values語字典長度就可以得到答案了
+
+假設values裡面有重複的數字就會跟字典長度不一樣回傳false
+
+```python
+class Solution:
+    def uniqueOccurrences(self, arr: List[int]) -> bool:
+        d = collections.Counter(arr)
+        return len(d) == len(set(d.values()))
+```
