Update 977. Squares of a Sorted Array.md

--- a/Easy/977. Squares of a Sorted Array.md
+++ b/Easy/977. Squares of a Sorted Array.md
@@ -5,3 +5,15 @@
 > Output: [0,1,9,16,100]
 > ```
 
+這題基本上如果是用python可以秒解
+
+題目是要你將input平方再進行排序
+
+直接用`pow`、`sorted`就可以秒解了
+
+```python
+class Solution:
+    def sortedSquares(self, A: List[int]) -> List[int]:
+        return sorted(pow(i,2) for i in A)
+
+```
