Update 657. Robot Return to Origin.md

--- a/Easy/657. Robot Return to Origin.md
+++ b/Easy/657. Robot Return to Origin.md
@@ -8,3 +8,27 @@
 > Input: "UD"
 > Output: true 
 > ```
+
+這題的概念是假設一開始站在原點
+
+經過輸入的字串進行移動，最後是否會回到原點
+
+利用上面的例子
+
+是先往上走("U")接著往下走("D")，所以會回到原點
+
+這題的概念就是計算出上與下、左與右的個數是否一樣
+
+若是一樣的話代表會走回原點反之則不會
+
+```python 
+class Solution:
+    def judgeCircle(self, moves: str) -> bool:
+        if (moves.count("R") == moves.count("L") and moves.count("U") == moves.count("D")):
+            return True
+        else:
+            return False
+
+
+```
+
