Update 961. N-Repeated Element in Size 2N Array.md

--- a/Easy/961. N-Repeated Element in Size 2N Array.md
+++ b/Easy/961. N-Repeated Element in Size 2N Array.md
@@ -7,3 +7,24 @@
 > Output: 3
 > ````
 
+這題的題目描述是給予2N的陣列
+
+陣列中有N+1個不重複的數字
+
+並且有其中一個數字重複N次
+
+要找出重複N次的數字為多少
+
+依上面的例子總長是2N → 4，所以要找重複N → 2次的數字
+
+依上面的case是數字3
+
+我的方法是將找出當前陣列中重複次數為長度的1/2就可以得到答案了
+
+```python
+class Solution:
+    def repeatedNTimes(self, A: List[int]) -> int:
+        for i in A:
+            if A.count(i) == len(A)/2:     
+                return i
+```
