Update 905. Sort Array By Parity.md

--- a/Easy/905. Sort Array By Parity.md
+++ b/Easy/905. Sort Array By Parity.md
@@ -8,5 +8,27 @@
 > Output: [2,4,3,1]
 > ```
 
+這題簡單來說就是要將偶數放前面，基數放後面
+
+所以我這裡的作法是將餘數等於0的數字從新陣列[0]的位子開始存放
+
+基數的話就放到陣列的最後面
+
+這題答案就解出來了並且是stable的
+
+
+```python
+class Solution:
+    def sortArrayByParity(self, A: List[int]) -> List[int]:
+        ans = []
+        now = 0
+        for i in A:
+            if i % 2 == 0:
+                ans.insert(now,i)
+                now += 1
+            else:
+                ans.append(i)
+        return ans
+```
 
 
