Update 1299. Replace Elements with Greatest Element on Right Side.md

--- a/Easy/1299. Replace Elements with Greatest Element on Right Side.md
+++ b/Easy/1299. Replace Elements with Greatest Element on Right Side.md
@@ -11,3 +11,28 @@
 ***
 
 ### A:
+
+這題要做的步驟是要取數列右邊的最大值
+
+並且要將數列最右邊改成"-1"
+
+所以我們可以由右到左進行替換數字的動作
+
+若是數字太多可以節省資料搜索的時間
+
+思維就是將當前數值的右邊最大值lock住
+
+第一個填寫-1、第二個填寫當前值
+
+若是下一個數值沒有超過最大值
+
+就一直使用這個數值當作結果以節省更新時間
+
+```python
+class Solution:
+    def replaceElements(self, arr: List[int]) -> List[int]:
+        x = -1
+        for i in range(len(arr)-1,-1,-1):
+            arr[i] , x =  x , max(arr[i],x)
+        return arr
+```
