Update 804. Unique Morse Code Words.md

--- a/Easy/804. Unique Morse Code Words.md
+++ b/Easy/804. Unique Morse Code Words.md
@@ -17,7 +17,26 @@
 
 ### A:
 
+這題的概念是要將list裡面的單字轉換成摩斯密碼
+
+對應上面的密碼重新組合後看有沒有重複字串
+
+所以我們可以先用`ord`轉數字後扣掉97('a'的數值)
+
+再利用join函數將每個字母轉換過後的密碼串接起來
+
+利用字典的方式來做儲存
+
+因為字典每一個集合只會儲存一次
+
+所以可以用這長度就知道總共有多少集合
+
+也就是這題的答案
 
 ```python
-
+class Solution:
+    def uniqueMorseRepresentations(self, words: List[str]) -> int:
+        code = [".-","-...","-.-.","-..",".","..-.","--.","....","..",".---","-.-",".-..","--","-.","---",".--.","--.-",".-.","...","-","..-","...-",".--","-..-","-.--","--.."]
+        d = {"".join(code[ord(c) - 97] for c in word)for word in words}
+        return (len(d))
 ```
