Update 1323. Maximum 69 Number.md

--- a/Easy/1323. Maximum 69 Number.md
+++ b/Easy/1323. Maximum 69 Number.md
@@ -12,6 +12,15 @@
 
 ### A:
 
+這題是要輸出最大值可以替換一次從6→9
+
+所以這題很簡單先檢查有沒有6在字串中
+
+若沒有就跟原本一模一樣
+
+如果有的話就替換6→9一次使得數值為最大
+
+
 ```python
 class Solution:
     def maximum69Number (self, num: int) -> int:
