--- a/Easy/922. Sort Array By Parity II.md
+++ b/Easy/922. Sort Array By Parity II.md
@@ -14,6 +14,15 @@
 
 ### A:
 
+這題要將偶數放在偶數的index內、奇數放在奇數的index內
+
+我的方法非常簡單新開一個陣列並用兩個變數去紀錄當前位置
+
+將偶數的數值放置在偶數index中、奇數的數值放置在奇數index中
+
+當然有更好的方式是直接將其位置進行交換
+
+這樣會變得更快也更節省記憶體
 
 
 ```python
