Update 1051. Height Checker.md

--- a/Easy/1051. Height Checker.md
+++ b/Easy/1051. Height Checker.md
@@ -13,6 +13,14 @@
 
 ### A:
 
+這題要去比較原本的陣列跟排列後的陣列有甚麼不一樣
+
+藉此來推斷出最少要移動多少的內容
+
+達到排列順序是對的結果
+
+所以這邊我們只要比較排列跟未排列的陣列不同的地方將其相加就會有結果了
+
 ```python
 class Solution:
     def heightChecker(self, heights: List[int]) -> int:
