Update 811. Subdomain Visit Count.md

--- a/Easy/811. Subdomain Visit Count.md
+++ b/Easy/811. Subdomain Visit Count.md
@@ -13,6 +13,21 @@
 ***
 
 ### A:
+
+這題主要是要計算domains之間的多寡
+
+以上面的例子`900(筆)google.mail.com(domains)`
+
+利用`split()`將其空白分開分成數量與doamins
+
+用`google.mail.com`這個例子可以分為(1)google.mail.com(2)mail.com(3)com
+
+所以遇到`.`就將其後面的domains加入新的字典中
+
+若是之後有遇到一樣的就可以直接做加入
+
+
+```python
 class Solution:
     def subdomainVisits(self, cpdomains: List[str]) -> List[str]:
         d = collections.Counter()
@@ -23,12 +38,4 @@ class Solution:
                 if domains[j] == ".":
                     d[domains[j + 1:]] += int(num)
         return [str(d[k]) +" "+ str(k) for k in d]
-
-```python
-class Solution:
-    def replaceElements(self, arr: List[int]) -> List[int]:
-        x = -1
-        for i in range(len(arr)-1,-1,-1):
-            arr[i] , x =  x , max(arr[i],x)
-        return arr
 ```
