Update 811. Subdomain Visit Count.md

--- a/Easy/811. Subdomain Visit Count.md
+++ b/Easy/811. Subdomain Visit Count.md
@@ -16,7 +16,7 @@
 
 這題主要是要計算domains之間的多寡
 
-以上面的例子`900(筆)google.mail.com(domains)`
+以上面的例子可以將其作這樣的理解 → **900(筆)google.mail.com(domains)**
 
 利用`split()`將其空白分開分成數量與doamins
 
