Update 700. Search in a Binary Search Tree.md

--- a/Easy/700. Search in a Binary Search Tree.md
+++ b/Easy/700. Search in a Binary Search Tree.md
@@ -20,6 +20,11 @@
 
 ### A:
 
+這題就只是要找到BST中子樹的位置以及底下的子樹
+
+只要先將題目所要求的數值位置找出來直接return之後的值就好了
+
+以上面的例子來看當root大於所要找的目標則向左移動反之向右進行遞迴直到找到正確數值
 
 
 ```python
