--- a/Easy/561. Array Partition I.md
+++ b/Easy/561. Array Partition I.md
@@ -11,9 +11,16 @@
 
 ### A:
 
+這題是要先將陣列排列成兩兩一組
+
+組合後的最小值要為組各種組合的最大值
+
+就是要從[1,4,3,2]➤(**1**,2),(**3**,4)➜1 + 3 = 4 or (**1**,3),(**2**,4)➜1 + 2 = 3 ....等組合
+
+所以我們可以直接將其作排列每隔兩個取一次就會是答案了
 
 ```python
 class Solution:
     def arrayPairSum(self, nums: List[int]) -> int:
-        return sum(sorted(nums)[::2])
+        return sum(sorted(nums)[::2]) # 0~end count 2
 ```
