Update 557. Reverse Words in a String III.md

--- a/Easy/557. Reverse Words in a String III.md
+++ b/Easy/557. Reverse Words in a String III.md
@@ -11,6 +11,13 @@
 
 ### A:
 
+這題的概念就是要將句子中的每個單字進行轉換
+
+這邊我用的方法是將每個字詞分開後進行倒序的方式再進行組合 ➤ ["s'teL", 'ekat', 'edoCteeL', 'tsetnoc']
+
+有其他方法是先將字詞排列順序倒序後 ➤ ['contest', 'LeetCode', 'take', "Let's"]
+
+再進行一次倒序也會得到一樣的做法 
 
 ```python
 class Solution:
