Update 1266. Minimum Time Visiting All Points.md

--- a/Easy/1266. Minimum Time Visiting All Points.md
+++ b/Easy/1266. Minimum Time Visiting All Points.md
@@ -15,6 +15,18 @@
 
 ### A:
 
+這題是要依照座標計算出經過所有點走的最短時間
+
+所以依照上面的例子[1,1]➔[3,4]最少要走3步▶[1,1] **->** [2,2] **->** [3,3] **->** [3,4]
+
+[3,4]➔[-1,0]最少要走4步▶ [3,4] **->**  [2,3] **->**  [1,2] **->**  [0,1] **->**  [-1,0]   
+
+所以花費最少時間就是7sec
+
+依上面的規則可以發現 x and y 與前一組x and y相減的最大值會是最少要走的步數
+
+將其進行加總就會是最後的結果了
+
 
 ```python
 class Solution:
