Update 1021. Remove Outermost Parentheses.md

--- a/Easy/1021. Remove Outermost Parentheses.md
+++ b/Easy/1021. Remove Outermost Parentheses.md
@@ -16,6 +16,24 @@
 
 ### A:
 
+這題的概念是要將括號內的括號取出來後進行相加
+
+定義是這樣的"("+"()+")"中間是我們要取出來的部分
+
+若是"()"這種則返回空值
+
+稍微觀察一下 **(()())** 可以將"("作為+1、")"作為-1
+
+最終會等於0為一個循環
+
+而我們需要的是中間的部分 
+
+寫成數值會長成這樣 ➤ (()()) = 121210
+
+我們需要的是當符號為"("時，數值要大於1；當符號為")"時，數值要大於0
+
+依照以上的規則就可以把結果呈現出來
+
 
 ```python
 class Solution:
