Update 1309. Decrypt String from Alphabet to Integer Mapping.md

--- a/Easy/1309. Decrypt String from Alphabet to Integer Mapping.md
+++ b/Easy/1309. Decrypt String from Alphabet to Integer Mapping.md
@@ -16,6 +16,19 @@
 
 ### A:
 
+這題主要希望我們能把數字轉換成相對應的字母
+
+a -> 1、b -> 2 ...、j -> 10#...以此類推
+
+以上面的例子10#->j、11->k、1-> a、2->b
+
+第一步我們要先將個位數以及十位數+#的數值做拆解
+
+這邊利用re.findall來解析字串
+
+接著取陣列中前兩位做數值加上96後為轉換成char的依據(chr(97)->a)
+
+最後將其全部合併起來就是此題的結果
 
 ```python
 class Solution:
