Update 1252. Cells with Odd Values in a Matrix.md

--- a/Easy/1252. Cells with Odd Values in a Matrix.md
+++ b/Easy/1252. Cells with Odd Values in a Matrix.md
@@ -12,6 +12,22 @@
 
 ### A:
 
+這題給給予一個二維陣列大小為(n,m)最終結果要找出此陣列中有多少奇數的數值
+
+而計算的方式為[x,y]中的行列加上一
+
+以上面的例子陣列大小為(2*3)，[0,1]為第0行個數都加一、第1列個數都加一
+
+就會變成[[1,1,1],[0,0,0]]->[[1,2,1],[0,1,0]]以此類推
+
+所以我們要先設定陣列row,col的大小用來存放每次加減的數值
+
+接著把每次讀取到的數值進行xor的運算
+
+做這件事的用意為一開始我們設定是0所以當其為奇數時會有輸出1
+
+所以我們可以將其數值在相乘後做加總就會是奇數的個數了
+
 
 ```python
 class Solution:
