Update 728. Self Dividing Numbers.md

--- a/Easy/728. Self Dividing Numbers.md
+++ b/Easy/728. Self Dividing Numbers.md
@@ -16,6 +16,17 @@
 
 ### A:
 
+這題的概念是自除數簡單來說就是這個數值
+
+有沒有辦法被自己的各個位數整除
+
+以上面的例子來做舉例->14可以被1整除但不能被4整除(不符合)、15可以被1整除也能被5整除(符合)
+
+以這觀念來寫程式邏輯為讀出所有數值從left~right
+
+接著判斷是否個數中有沒有包含0以及是否能被整除
+
+這邊利用`all()`函數來將所有數值進行運算最後輸出符合條件的數值
 
 ```python
 class Solution:
