Update 942. DI String Match.md

--- a/Easy/942. DI String Match.md
+++ b/Easy/942. DI String Match.md
@@ -6,8 +6,6 @@
 > -If S[i] == "I", then A[i] < A[i+1]
 > -If S[i] == "D", then A[i] > A[i+1]
 
-
-
 > ```
 > Input: "IDID"
 > Output: [0,4,1,3,2]
@@ -17,11 +15,29 @@
 
 ### A:
 
+這題題目描述滿奇怪的
 
+主要的概念就是假設我讀取到字串值為I的話
 
+輸出答案陣列當前位置的數值要小於下一位置的數值
 
+反之若是D的話當前位置的數值要大於下一位置的數值
 
+以上面的例子做舉例第一個讀取到的字串為I -> 當前位置填入0 、 下一位置填4(0 < 4成立)
 
+第二個讀取到的字串為D -> 當前位置為4 、 下一位置填1(4 > 1成立)以此類推
+
+所以思維邏輯我們訂定兩個數值0與字串長度作為開始
+
+因為利用這兩個數值會從最大跟最小開始作排列避免排列到後面出現問題
+
+只要出現I的狀況就填入從0開始的數值因為它要的結果為 **當前位置的數值要小於下一位置的數值**
+
+所以即便是在出現I的狀況下都還時成立
+
+反之若是D的狀況下就從字串個數開始扣
+
+因為最大的排列也只會到字串長度的數值(因為起始長度為0)
 
 ```python
 class Solution:
