Update 944. Delete Columns to Make Sorted.md

--- a/Easy/944. Delete Columns to Make Sorted.md
+++ b/Easy/944. Delete Columns to Make Sorted.md
@@ -18,6 +18,24 @@
 
 ### A:
 
+這題題目敘述不太好也滿多人看不懂的包括我在內
+
+現在我把這道題目理解成在不同的陣列中刪除同樣的index
+
+而剩下的index產生的排列組合
+
+**不**呈現降序排列的有多少組
+
+以上面的例子來看　1.c->d->g　2.b->a->h　3.a->f->i
+
+符合以上之結果只有第二組所以答案輸出1
+
+而程式的邏輯非常簡單只要把原始數列跟排序過後的數列進行比較
+
+若是不相同的化就是其中一組解
+
+最主要可以用`zip(*array)`來取出column
+
 ```python
 class Solution:
     def minDeletionSize(self, A: List[str]) -> int:
