Update 929. Unique Email Addresses.md

--- a/Easy/929. Unique Email Addresses.md
+++ b/Easy/929. Unique Email Addresses.md
@@ -22,6 +22,20 @@
 
 ### A:
 
+這題要找出獨一無二的email信箱
+
+主要是前面Local加上@後面的domain要是獨一無二的狀況就是唯一的email
+
+用上面的例子來做舉例
+
+當遇到`.`的時候視為相同的name、遇到`+`的時候後面的字串並不用理會
+
+上面的例子合併後的結果為["testemail@leetcode.com","testemail@leetcode.com","testemail@lee.tcode.com"]
+
+我的方法是利用字典去做紀錄當填入相同的集合就不會增加字典的長度
+
+所以最後輸出字典長度就是所有集合的答案
+
 
 ```python
 class Solution:
