Update 67. Add Binary.md

--- a/Easy/67. Add Binary.md
+++ b/Easy/67. Add Binary.md
@@ -12,6 +12,15 @@
 
 ### A:
 
+這題要將二進制的數值做相加
+
+第一個方法可以使用個位數相加，若是有進為進位加上十位數相加....
+
+而我用的方法是將字串轉換成以二進制表示的數值做相加
+
+最後用二進制輸出，而因為python二進制會輸出0bxxxx
+
+所以要從index[2]之後再進行取值的動作才會是正解
 
 ```python
 class Solution:
