Update 717. 1-bit and 2-bit Characters.md

--- a/Easy/717. 1-bit and 2-bit Characters.md
+++ b/Easy/717. 1-bit and 2-bit Characters.md
@@ -13,9 +13,23 @@
 
 ### A:
 
-這題的問題是要判斷最後一個數字是否是個位數
+這題的問題是要判斷最後一個數字是否是一位數
 
+只要是10、11都被歸類為兩位數，而只有0為一位數
 
+我的方法是設定一個變數從頭按照順序掃當遇到1的時候就+2，遇到0則+1
+
+其原因是代表占兩個bits以及1bit
+
+若是最後index長度跟變數相同就代表最後一位是1個bit
+
+ex.
+
+[1,0,0]　1.10->下個位置為index[2] == 陣列長度-1　(✔)
+
+[1,0,1,0]　1.10　2.10 ->下個位置為index[4] != 陣列長度-1　(✘)
+
+[1,0,1,0,0,0]　1.10　2.10　3.0->下個位置為index[5] == 陣列長度-1　(✔)
 
 ```python
 class Solution:class Solution:
