Update 258. Add Digits.md

--- a/Easy/258. Add Digits.md
+++ b/Easy/258. Add Digits.md
@@ -11,7 +11,17 @@
 
 ### A:
 
+這題的概念就是要將大於個位數的數值
 
+依照位數進行加總的動作
+
+以上面的例子
+
+38->3+8=11 ➔ 11 -> 1 + 1 = 2(ans)
+
+所以只要將數值轉換成陣列做相加
+
+當大於等於10的情況下一直進行上述的動作就是這題的解答
 
 ```python
 class Solution:
