Update 415. Add Strings.md

--- a/Easy/415. Add Strings.md
+++ b/Easy/415. Add Strings.md
@@ -17,6 +17,37 @@
 
 ### A:
 
+這題麻煩的是他規定不能直接用Int進行運算
+
+當然有其他函數可以使用例如`ord()`能夠將字元轉換成數字也可以達到這個目的
+
+而我在字串處理後利用字元轉換成數字雖然有點偷吃步但看討論區還滿多人這樣做的
+
+我的方法是將字串統一長度之後從個位數開始進行加總
+
+當有進位時會將carry改變成1後在下一次進行相加的動作否則carry=0
+
+麻煩的是最高位元的部分
+
+最高位元要若是>9的時候就要輸出兩個位數否則就只有輸出單一位數
+
+最後要將其進行反序的排列
+
+因為我們是從個位數開始做加總但實際上結果希望顯示是相反的
+
+ex.
+
+123+789 
+
+1.9+3=2 carry=1
+
+2.2+8+1=1 carry=1
+
+3.1+7+1 =9
+
+ans = 219的反序 ->912
+
+
 
 ```python
 class Solution:
