Update 989. Add to Array-Form of Integer.md

--- a/Easy/989. Add to Array-Form of Integer.md
+++ b/Easy/989. Add to Array-Form of Integer.md
@@ -12,14 +12,47 @@
 
 ### A:
 
+這題滿不錯的是在問給予一個數字陣列
+
+要將其轉換成數值與k進行相加最後輸出數字陣列
+
+我的方法就是硬做先將陣列轉成字元後進行合併再與k做相加
+
+接著將答案轉成字串一個一個填入陣列當中
+
+因為一直轉來轉去的結果效率其實很差
+
+看到其他高手的方法
+
+是使用除法以及取餘數的想法來進行
+
+從後面往前掃每次更新陣列A與K
+
+以上面的例子來看
+
+1. [1,2,0,0] + 34- > A[3] = 4,K=3
+
+2. [1,2,0,4] + 3- > A[2] = 3,K=0
+
+3. [1,2,0,4] + 3- > A[1] = 3,K=0
+
+4. [1,2,0,4] + 3- > A[0] = 3,K=0
+
+A = 1234
+
+考慮到K不等於0的狀況
+
+當K位數 > A位數時要將最後K的值串接至最前面才能代表真正的數值
 
 ```python
 class Solution:
     def addToArrayForm(self, A: List[int], K: int) -> List[int]:
+        
         #Other method (faster)
         for i in range(len(A)-1,-1,-1):
             K,A[i] = divmod(A[i]+K,10)
         return [int(i) for i in str(K)] + A if K else A
+        
         #My method
         ans = int("".join([str(i) for i in A])) + K
         return [int(i) for i in str(ans)]
