Update 441. Arranging Coins.md

--- a/Easy/441. Arranging Coins.md
+++ b/Easy/441. Arranging Coins.md
@@ -18,12 +18,41 @@
 
 ### A:
 
+這題是要找出row中所占最大的coins
 
+第一行1、第二行2、、第二行3...以此類推
+
+我的方法是直接用掃的方式計數
+
+每次扣掉該行個數直到小於0的時候就跳出
+
+最後return計數值減1
+
+因為會先進行判斷再進行個數的減法所以會多計數一次
+
+這樣的方法非常慢有人提出利用數學的解法來解
+
+證明公式如下
+
+n >= (第一行個數+最多行個數) * 高/2 ->最多行個數 == 高
+
+n >= (1+h)*h/2
+
+2n >= (h+h^2)
+
+2n + 1/4 >= (h+h^2) + 1/4
+
+2n + 1/4 >= (h + 1/2)^2
+
+sqrt(2n + 1/4) >= (h + 1/2)
+
+sqrt(2n + 1/4) - 1/2 >= h
 
 
 ```python
 class Solution:
     def arrangeCoins(self, n: int) -> int:
+        
         # My Method
         i = 1
         while n > 0:
@@ -34,4 +63,5 @@ class Solution:
         return i - 1
         
         # The math Method
-        return int((math.sqrt(8 * n + 1)-1)/2)```
+        return int(math.sqrt(2 * n + 1/4) - 1/2)
+```
