Update 999. Available Captures for Rook.md

--- a/Easy/999. Available Captures for Rook.md
+++ b/Easy/999. Available Captures for Rook.md
@@ -17,6 +17,25 @@
 
 ### A:
 
+這題的概念就是要計算白色城堡(R)能夠吃到多少小兵(p)
+
+如果其中有自己人(B)的話則不能直接吃到
+
+所以必須找出能夠吃到最多小兵的結果
+
+其實最好的狀況就是四個角落都有黑色的小兵最大值是4
+
+除非他們之間有自己人(B)影響路徑
+
+我的做法是先找出白色城堡(R)的位置接著將Col、Row做儲存
+
+然後將`.`替換成`空格`最後計算`Rp`的個數
+
+因為沒有自己人的狀況下順向跟反向都只會有一組解
+
+有自己人的情況下`Rp`就不成立
+
+
 ```python
 class Solution:
     def numRookCaptures(self, A: List[List[str]]) -> int:
