Update 504. Base 7.md

--- a/Easy/504. Base 7.md
+++ b/Easy/504. Base 7.md
@@ -10,6 +10,27 @@
 
 ### A:
 
+這題是要將十進制轉換成七進制
+
+有進制轉換的概念其實滿簡單的
+
+十進制 to 七進制 -> 就是取7的餘數在除7做循環
+
+ex.(10)->(7)
+
+101 % 7 = **3**　100 // 7 = 14
+
+14 % 7 = **0**　14 // 7 = 2
+
+2 % 7 = **2** -> ans = 203
+
+依照上面的邏輯我們要串接新的數值在前一個字串的最前端
+
+接著再進行除法取整數的動作
+
+然後我們需要考慮正負以及0的狀況
+
+這邊先取絕對值後進行計算在最後輸出時在判斷原本是正數或是負數作為輸出結果
 
 
 ```python
