Update 682. Baseball Game.md

--- a/Easy/682. Baseball Game.md
+++ b/Easy/682. Baseball Game.md
@@ -20,6 +20,23 @@
 
 ### A:
 
+這題主要是處理陣列數值的問題
+
+有三個字元要做處理分別為"+"、"C"、"D"
+
+"C"為移除當前陣列的最後一個值
+
+"D"為將當前陣列的最後一個值加倍
+
+"+"為將當前陣列的最後一個值與倒數第二個值相加
+
+所以這程式非常的直觀遇到"C"時`pop()`最後一個值
+
+遇到"D"時找到最後一個值乘上兩倍
+
+遇到"+"時最後一個值+倒數第二個值
+
+其餘的就填入陣列最後將陣列內所有的值相加輸出答案就好了
 
 
 ```python
