Update 392. Is Subsequence.md

--- a/Easy/392. Is Subsequence.md
+++ b/Easy/392. Is Subsequence.md
@@ -14,6 +14,17 @@
 
 ### A:
 
+這題要確認此字串有沒有在另一個字串出現並且順序是相同的
+
+以上面的例子s = abc要去判斷有沒有在另一個t字串出現相同順序
+
+t = **a** ~h~ **b** ~gd~ **c**　所以回true
+
+我的方法是當遇到相同字的時候就把最前面的字pop掉
+
+接著最後比對字串是否為空值
+
+若是空值代表所有字順序與另一個字串一樣就為我們的答案了
 
 ```python
 class Solution:
