Update 1287. Element Appearing More Than 25% In Sorted Array.md

--- a/Easy/1287. Element Appearing More Than 25% In Sorted Array.md
+++ b/Easy/1287. Element Appearing More Than 25% In Sorted Array.md
@@ -12,7 +12,19 @@
 
 ### A:
 
+這題要問的是在陣列中有沒有其中一個個數超過25%
 
+我的方法是找出arr理面的set()
+
+依序pop後寫入字典中接著找出其最大值計算是否又大於25%
+
+有看到其他的的寫法超聰明的
+
+直接將陣列長度除上4用liner的方式掃描
+
+若是剛好其解會與陣列長度除上4相同就會是答案
+
+因為他占的長度大於1/4
 
 
 ```python
@@ -28,7 +40,7 @@ class Solution:
         if max(ans.keys())/sum(ans.keys()) > 0.25:
             return ans.get(max(ans.keys()))
 
-# more quickly method
+# otrher quickly method
 class Solution:
   def findSpecialInteger(self, arr: List[int]) -> int:
     n = len(arr) // 4
