Update 141. Linked List Cycle.md

--- a/Easy/141. Linked List Cycle.md
+++ b/Easy/141. Linked List Cycle.md
@@ -13,9 +13,15 @@
 
 ### A:
 
+這題是要判斷linked list是否有環
 
+而環的定義就是pos是否大於0當然在實際情況下告訴pos的值
 
+所以在搜尋的過程中找出是否出現過相同元素
 
+而我用的方法是利用set的方式當前數值已經存放至dict中就代表已經繞了一圈了
+
+有其他種方式是利用快慢指針的方式來做呈現
 
 ```python
 # Definition for singly-linked list.
