Update 268. Missing Number.md

--- a/Easy/268. Missing Number.md
+++ b/Easy/268. Missing Number.md
@@ -10,12 +10,23 @@
 
 ### A:
 
+這題是要找出陣列中缺少的數值
+
+以上面的例子就是013很明顯少2
+
+用上面的這個概念來進行實作
+
+而我用的方法是利用沒有遺失的結果相加的結果
+
+減去現在陣列中的所有數值就可以找出缺少的那個數值了
+
+而期望的結果就是以梯形面積公式來做計算
 
 ```python
 class Solution:
     def missingNumber(self, nums: List[int]) -> int:
         
-        expectnum = (len(nums) * (len(nums)+1))//2
-        actualnum = sum(nums)
+        expect = (len(nums) * (len(nums)+1))//2
+        actual = sum(nums)
         return expectnum - actualnum
 ```
