--- a/Medium/49. Group Anagrams.md
+++ b/Medium/49. Group Anagrams.md
@@ -28,3 +28,7 @@ class Solution:
             ans[tuple(char_arr)].append(i)
         return ans.values()
 ```
+Time Complexity: O(NK),
+N : strs 長度, K: strs 中最大長度
+Space Complexity: O(NK)
+ans 大小
