Update 876. Middle of the Linked List.md

--- a/Easy/876. Middle of the Linked List.md
+++ b/Easy/876. Middle of the Linked List.md
@@ -12,7 +12,19 @@
 
 ### A:
 
+這題要做的事就是將其linked list中的中間值找出來
 
+如果陣列長度是偶數的話則取中間值後面的那個 -> [1,2,3,4,5,6] -> 4...
+
+所以就可以使用快慢指針或是list的方式來做紀錄
+
+而我這裡是使用快慢指針的方式
+
+ex.
+
+s/f　　s　　s/f　　　　f
+
+1　　2　　3　　4　　5
 
 ```python
 # Definition for singly-linked list.
@@ -23,9 +35,13 @@
 
 class Solution:
     def middleNode(self, head: ListNode) -> ListNode:
-        ans = [] 
-        while head:
-            ans.append(head.val)
-            head = head.next
-        return ans[len(ans)//2:]
+        s = f = head 
+        while f and f.next:
+            s = s.next
+            f = f.next.next
+        return s
 ```
+
+- Time complexity : O(n).
+
+- Space complexity : O(1).
