Update 122. Best Time to Buy and Sell Stock II.md

--- a/Easy/122. Best Time to Buy and Sell Stock II.md
+++ b/Easy/122. Best Time to Buy and Sell Stock II.md
@@ -14,7 +14,23 @@
 
 ### A:
 
+這題要求存貨的最大利潤
 
+最好是買低價然後賣高價才能獲得最大利益
+
+所以只要陣列右邊大於左邊就將其差的值
+
+一直進行相加的動作就好了
+
+ex.
+
+[1,2,3,4,5]
+
+1 + 1 + 1 + 1 = 4
+
+[1,3,2,4,5]
+
+2 + 2 + 1 = 5
 
 ```python
 class Solution:
