Update 202. Happy Number.md

--- a/Easy/202. Happy Number.md
+++ b/Easy/202. Happy Number.md
@@ -12,7 +12,47 @@
 
 ### A:
 
+這題要計算的是他是不是一個happy numbers
 
+happy numbers的定義是若是進入到無窮迴圈最後一個數直是否為1
+
+而計算方式是使用該數各個位數的平方相加直到有重複數值出現
+
+所以可以利用hashtable來進行儲存數值
+
+ex.
+
+11
+
+1^2 + 1^2 = 2
+
+2^2 = 4
+
+4^2 = 16
+
+1^2 + 6^2 = **37**
+
+3^2 + 7^2 = 55
+
+5^2 + 5^2 = 50
+
+5^2 = 25
+
+2^2 + 5^2 = 29
+
+2^2 + 9^2 = 85
+
+8^2 + 5^2 = 41
+
+4^2 + 1^2 = 18
+
+1^2 + 8^2 = 65
+
+6^2 + 5^2 = 61
+
+6^2 + 1^2 = **37**
+
+return False
 
 ```python
 class Solution:
@@ -23,3 +63,7 @@ class Solution:
             n = sum([int(i)**2 for i in str(n)])
         return n == 1
 ```
+- Time complexity : O(n).
+
+- Space complexity : O(1).
+
