--- a/Easy/136. Single Number.md
+++ b/Easy/136. Single Number.md
@@ -15,6 +15,16 @@
 ### A:
 
 
+這題是要找出陣列中單獨的數值
+
+我利用的方式是使用hashtable紀錄每個出現數值的個數
+
+最後找出僅有一個的數值就為答案
+
+ex.
+
+[1,1,2,3,3,4,4] -> {1:2,2:1,3:2,4:2}
+
 ```python
 class Solution:
     def singleNumber(self, nums: List[int]) -> int:
@@ -29,3 +39,6 @@ class Solution:
             if j == 1:
                 return i
 ```
+- Time complexity : O(n).
+
+- Space complexity : O(1).
