Update 283. Move Zeroes.md

--- a/Easy/283. Move Zeroes.md
+++ b/Easy/283. Move Zeroes.md
@@ -16,6 +16,23 @@
 
 ### A:
 
+這題的概念是要將0放置陣列的最後方
+
+接著前面的數列要維持排列並且要保持in-place
+
+所以不能再用其他的list來進行排序
+
+用一個變數紀錄現在index的位置
+
+從第一個index開始掃若是不為零就將其往前搬移
+
+將0往後放進行交換的動作
+
+ex.
+
+[0,1,0,3,12] -> [1,0,0,3,12]-> [1,3,0,0,12]-> [1,3,12,0,0]
+
+
 
 ```python
 class Solution:
@@ -31,3 +48,7 @@ class Solution:
         print(nums)
 
 ```
+
+- Time complexity : O(n).
+
+- Space complexity : O(1).
